# pico-embedded-swift

./: CMakeLists.txt  Dockerfile  README.md  blink.c  main.c  swift-shims.c
SwiftLib/: CMakeLists.txt  README.md  SwiftLib.h  SwiftLib.swift
my-swift-lib/: CMakeLists.txt  my-swift-lib.h  my-swift-lib.swift
swiftlib/: CMakeLists.txt  lib.swift  swiftlib.h
